# QueueWave

./: Cargo.toml  Dockerfile  README.md  application.yml  pingpong.py  supervisord.conf  test-consume.py  test-publish.py  test-read-1.py  test-read-2.py  test-sender.py  test.py
.github/workflows/: docker-release.yml
amq_lib/: Cargo.toml
amq_lib/src/: client.rs  config.rs  connection.rs  lib.rs  server.rs  session.rs
api/: Cargo.toml
api/src/: lib.rs  package_api.rs  storage_api.rs  storaget_api.rs  token_api.rs  user_api.rs
cli/: Cargo.toml
cli/src/: lib.rs
config/: Cargo.toml
config/src/: lib.rs
data_lib/: Cargo.toml  storaget.sql
data_lib/src/: Sender.rs  header.rs  lib.rs  message.rs  metadata.rs  payload.rs  storaget.rs
logging/: Cargo.toml
logging/src/: lib.rs
mq/: Cargo.toml
mq/src/: lib.rs
pubsub_mq/: Cargo.toml
pubsub_mq/src/: lib.rs  pubsub.rs
secure_mq_models/: Cargo.toml
secure_mq_models/src/: lib.rs
src/: main.rs
tmp/: test_queue.queue
user_manager/: Cargo.toml  user.sql
user_manager/src/: lib.rs  user.rs
vue_frontend/: nginx.conf  package-lock.json  package.json
vue_frontend/src/: components.d.ts  main.ts  typed-router.d.ts
vue_frontend/src/components/: HeaderComponent.vue  PackageInfoComponent.vue  PackageTable.vue  SidebarComponent.vue
vue_frontend/src/pages/: AllPackages.vue  DashboardPage.vue  HomePage.vue
vue_frontend/src/router/: index.ts
warehouse/: Cargo.toml
warehouse/src/: lib.rs  package.rs  store.rs
