[workspace]
members = [
"user_manager", "logging", "data_lib", "api", "amq_lib", "config"]
[package]
name = "QueueWave"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "QueueWave"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
user_manager = { path = "user_manager" }
logging = { path = "logging" }
data_lib = { path = "data_lib" }
api = { path = "api" }
amq_lib = { path = "amq_lib" }
config = { path = "config" }


actix-web = "4"
tokio = "1.39.2"
serde = { version = "1.0.204", features = ["derive"] }




[profile.release]
panic = 'abort'
lto = true
codegen-units = 1
