[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
actix-cors = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.0"
log = "0.4"
warehouse = { path = "../warehouse" }
user_manager = { path = "../user_manager" }
logging = { path = "../logging" }
tokio = "1.39.2"
pubsub_mq = { path = "../pubsub_mq" }
jsonwebtoken = "9.3.0"
actix-http = "3.8.0"

