[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
logging = { path = "../logging" }
actix-web = "4.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
data_lib = { path = "../data_lib" }
config = { path = "../config" }
user_manager = { path = "../user_manager" }
uuid = { version = "0.8.2", features = ["v4"] }
actix-cors = "0.7.0"