[package]
name = "user_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
logging = { path = "../logging" }
tokio = { version = "1", features = ["full"] }
config = { path = "../config" }
chrono = "0.4.38"
uuid = { version = "1", features = ["v4"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }