[package]
name = "warehouse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
bincode = "1.3.3"
uuid = { version = "1.10.0", features = ["v4"] }
chrono = "0.4.38"
logging = { path = "../logging" }